# team-rocket

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  SYSTEM_DESIGN.md  __init__.py  baseline_results.json  client.py  generate_scenarios.py  inference.py  main.py  openenv.yaml  pyproject.toml  requirements.txt  structure.txt
SciCheck/: __init__.py  baseline.py  generate_scenarios.py  models.py
SciCheck/core/: config.py  schema.py
SciCheck/data/: scenarios.json
SciCheck/server/: __init__.py  app.py  environment.py  session_store.py
SciCheck/server/routes/: debug.py  episode.py  meta.py
SciCheck/services/: distortions.py  engine.py  fetch.py  groq_pr.py
core/: config.py  schema.py
data/: data_lookup.py  scenarios.json
server/: __init__.py  app.py  environment.py  session_store.py
server/routes/: debug.py  episode.py  meta.py
services/: engine.py  fetch.py  groq_pr.py
